Update dot files

--- a/.jshintrc
+++ b/.jshintrc
@@ -1,5 +1,5 @@
 {
-    "bitwise": true,
+    "bitwise": false,
     "camelcase": true,
     "curly": true,
     "eqeqeq": true,
@@ -13,12 +13,12 @@
     "noempty": true,
     "nonew": true,
     "plusplus": true,
-    "quotmark": "single",
+    "quotmark": true,
     "undef": true,
     "unused": true,
     "strict": true,
     "trailing": true,
-    "maxparams": 3,
+    "maxparams": false,
     "maxdepth": false,
     "maxstatements": false,
     "maxcomplexity": false,
