--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "ev3",
     "version": "0.2.1",
-    "description": "Node.js for Lego Mindstorms EV3.",
+    "description": "Node.js on the Lego Mindstorms EV3 Intelligent Brick.",
     "keywords": [
         "ev3", "lego", "mindstorms", "lms"
     ],
